integration with BE

--- a/src/components/FoodItems/FoodItem.css
+++ b/src/components/FoodItems/FoodItem.css
@@ -49,7 +49,7 @@
       font-size: 1.25rem;
     }
   
-    .food-item__price {
+    .food-item__calories {
       font-size: 1.25rem;
       padding: 0.5rem 1.5rem;
     }
