--- a/src/components/UserRegistration/Form.css
+++ b/src/components/UserRegistration/Form.css
@@ -1,66 +1,90 @@
 .user-registration__controls {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    text-align: left;
-  }
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	margin-bottom: 1rem;
+	text-align: left;
+}
   
-  .user-registration__control label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    display: block;
-  }
+.user-registration__control input {
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  width: 20rem;
+  max-width: 100%;
+  margin: 0.5rem;
+}
   
-  .user-registration__control input {
-    font: inherit;
-    padding: 0.5rem;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    width: 20rem;
-    max-width: 100%;
-    margin-bottom: 0.5rem;
-  }
-  
-  .user-registration__actions {
-    text-align: right;
-  }
+.user-registration__actions {
+	text-align: center;
+	align-items: center;
+}
 
-  .user-registration {
-    background-color: #a892ee;
-    padding: 1rem;
-    margin: 2rem auto;
-    width: 50rem;
-    max-width: 95%;
-    border-radius: 12px;
-    text-align: center;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  }
-  
-  .user-registration button {
-    font: inherit;
-    cursor: pointer;
-    padding: 1rem 2rem;
-    border: 1px solid #40005d;
-    background-color: #40005d;
-    color: white;
-    border-radius: 12px;
-    margin-right: 1rem;
-  }
-  
-  .user-registration button:hover,
-  .user-registration button:active {
-    background-color: #510674;
-    border-color: #510674;
-  }
-  
-  .user-registration button.alternative {
-    color: #220131;
-    border-color: transparent;
-    background-color: transparent;
-  }
-  
-  .user-registration button.alternative:hover,
-  .user-registration button.alternative:active {
-    background-color: #ddb3f8;
-  }
+.user-registration {
+	background-color: #a892ee;
+	padding: 1rem;
+	margin: 2rem auto;
+	width: 50rem;
+	max-width: 95%;
+	border-radius: 12px;
+	text-align: center;
+	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+}
+
+.user-registration button {
+	font: inherit;
+	cursor: pointer;
+	padding: 1rem 2rem;
+	border: 1px solid #40005d;
+	background-color: #40005d;
+	color: white;
+	border-radius: 12px;
+	margin-right: 1rem;
+}
+
+.user-registration button:hover,
+.user-registration button:active {
+	background-color: #510674;
+	border-color: #510674;
+}
+
+.user-registration button.alternative {
+	color: #220131;
+	border-color: transparent;
+	background-color: transparent;
+}
+
+.user-registration button.alternative:hover,
+.user-registration button.alternative:active {
+	background-color: #ddb3f8;
+}
+
+.switch {
+  margin: 0.5rem;
+  text-align: center;
+}
+
+.switch div{
+  display: inline-block;
+  border: 1px solid #40005d;
+  padding: 1rem 1rem;
+  vertical-align: middle;
+  background-color: #40005d;
+  color: white;
+}
+
+.left{
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.right{
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+.clicked {
+  background-color: #510674;
+  border-color: #510674;
+}
